--- a/transactions/package.json
+++ b/transactions/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,9 @@
     "fastify": "^5.6.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^24.5.2",
+    "eslint": "^8.33.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
