--- a/transactions/package.json
+++ b/transactions/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
