--- a/transactions/package.json
+++ b/transactions/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "knex": "^3.1.0",
