--- a/transactions/package.json
+++ b/transactions/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts ",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
@@ -18,7 +21,7 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.16.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "eslint": "^8.33.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
