--- a/transactions/package.json
+++ b/transactions/package.json
@@ -18,8 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
+    "fastify-type-provider-zod": "^6.0.0",
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "zod": "^4.1.11"
